# HGCal_TB_Geant4

./: .gitignore  CMakeLists.txt  HGCal_TB2018.cc  matscan.mac  readFromFile.mac  run.mac  vis.mac
include/: ActionInitialization.hh  CMSEmStandardPhysicsHcal.hh  DetectorConstruction.hh  EventAction.hh  FTFPCMS_BERT_EMM.hh  HGCalTBMaterials.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SiPMHit.hh  SiPMSD.hh  SiliconPixelHit.hh  SiliconPixelSD.hh  SteppingAction.hh  config22_October2018_1.hh  materials.hh  test_configs.hh
src/: ActionInitialization.cc  CMSEmStandardPhysicsHcal.cc  DetectorConstruction.cc  EventAction.cc  FTFPCMS_BERT_EMM.cc  HGCalTBMaterials.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SiPMHit.cc  SiPMSD.cc  SiliconPixelHit.cc  SiliconPixelSD.cc  SteppingAction.cc  config22_October2018_1.cc  materials.cc  test_configs.cc
